value api: fix tests + code cleanup